chore: remove .agent directory from tracking and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ projects/**/buffers/*_inbox_guard.json
 projects/**/memory.sqlite
 projects/**/memory.sqlite-shm
 projects/**/memory.sqlite-wal
+.agent/
